packages/isar_community_generator/test/errors/class/abstract.dart
// must not be abstract

import 'package:isar_community/isar.dart';

@collection
abstract class Model {
  Id? id;
}
